--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 body{
-    background-color: #444;
+    background-color: #222;
+}
+h1{
+    color: #fff;
+    text-align: center;
+}
+p{
+    color: #fff;
+    text-align: center;
+}
+.btnGroup{
+    display: flex;
+    justify-content: space-around;
+    margin: 100px 0;
+}
+#btnRock{
+    flex: 1;
+    max-width: 300px;
+    padding: 5px;
+    border-radius: 30px;
+    margin: 0 30px;
+}
+#btnPaper{
+    flex: 1;
+    max-width: 300px;
+    padding: 5px;
+    border-radius: 30px;
+    margin: 0 30px;
+}
+#btnScissors{
+    flex: 1;
+    max-width: 300px;
+    padding: 5px;
+    border-radius: 30px;
+    margin: 0 30px;
 }
