--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
 h1{
     color: #fff;
     text-align: center;
+    font-size: 32px;
 }
 p{
     color: #fff;
@@ -12,26 +13,41 @@ p{
 .btnGroup{
     display: flex;
     justify-content: space-around;
-    margin: 100px 0;
+    margin: 20px 0;
 }
 #btnRock{
     flex: 1;
     max-width: 300px;
-    padding: 5px;
+    padding: 8px;
     border-radius: 30px;
     margin: 0 30px;
 }
 #btnPaper{
     flex: 1;
     max-width: 300px;
-    padding: 5px;
+    padding: 8px;
     border-radius: 30px;
     margin: 0 30px;
 }
 #btnScissors{
     flex: 1;
     max-width: 300px;
-    padding: 5px;
+    padding: 8px;
     border-radius: 30px;
     margin: 0 30px;
+}
+#playersSelections{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+h3{
+    text-align: center;
+    color: #fff;
+    font-size: 26px;
+}
+img{
+    width: 300px;
+    margin: 0 100px;
+    border-radius: 30px;
 }
