--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #222;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(101,25,215,1) 35%, rgba(0,212,255,1) 100%);
 }
 h1{
     color: #fff;
@@ -13,26 +13,32 @@ p{
 .btnGroup{
     display: flex;
     justify-content: space-around;
-    margin: 20px 0;
+    margin: 100px 500px;
 }
 #btnRock{
     flex: 1;
     max-width: 300px;
-    padding: 8px;
+    padding: 10px;
     border-radius: 30px;
     margin: 0 30px;
+}
+button{
+    border: solid 3px #fff;
+    color: #fff;
+    background-color: rgba(0,212,255,0.0);
+    font-size: 16px;
 }
 #btnPaper{
     flex: 1;
     max-width: 300px;
-    padding: 8px;
+    padding: 10px;
     border-radius: 30px;
     margin: 0 30px;
 }
 #btnScissors{
     flex: 1;
     max-width: 300px;
-    padding: 8px;
+    padding: 10px;
     border-radius: 30px;
     margin: 0 30px;
 }
